settings for gh-pages

--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,4 @@ exclude:
   - LICENSE.text
   - README.md
   - SECURITY.md
+\en\pages\setting-up-a-github-pages-site-with-jekyll\santsan-00\tomas-jekyll\settings\pages
